--- a/css/sidebar.css
+++ b/css/sidebar.css
@@ -6,12 +6,15 @@ body {
     background-color: white;
     width: 250px;
     min-height: 100vh;
+    position: relative;
 }
 
 .sidebar-items {
     display: flex;
     flex-direction: column;
     padding: 8px;
+    position: sticky;
+    top: 58px;
 }
 
 .sidebar-item {
@@ -20,6 +23,11 @@ body {
     gap: 8px;
     padding: 8px 16px;
     border-radius: 5px;
+    cursor: pointer;
+    text-decoration: none;
+}
+.sidebar-item.active {
+    background-color: #F0F2F4;
 }
 
 .sidebar-item:hover {
