--- a/css/product.css
+++ b/css/product.css
@@ -140,7 +140,7 @@
 
   .update {
     height: 40px;
-    padding:10px 20px;
+    padding: 10px 20px;
     background: #F0F2F4;
     box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.25);
     border-radius: 5px;
@@ -148,6 +148,8 @@
     justify-content: center;
     position: relative;
     float: right;
+    text-decoration: none;
+    color: black;
   }
 
   .update:active {
