--- a/css/index.css
+++ b/css/index.css
@@ -35,3 +35,30 @@ body{
     width: 100%;
     /* background-color: white; */
 }
+
+.row{
+    margin: 0% !important;
+}
+.form-group {
+    margin-bottom: -10px !important;
+}
+.form-group label {
+    font-size: 12px;
+}
+
+.form-control {
+    margin-bottom: 10px !important;
+    font-size: 12px !important;
+}
+
+.table-input{
+    margin: 0;
+    width: 100%;
+    height: 100%;
+    padding: 8px;
+    border: 1px solid #E0E3E6;
+}
+
+.desc {
+    width: auto !important;
+}
