--- a/css/product.css
+++ b/css/product.css
@@ -13,7 +13,8 @@
   .box {
     padding: 16px;
     background-color: #ffffff;
-    border: 2px solid #d6dce2;
+    /* border: 2px solid #d6dce2; */
+    box-shadow: 0px 0px 2px #d6dce2;
     border-radius: 5px;
   }
 
