--- a/css/index.css
+++ b/css/index.css
@@ -26,7 +26,8 @@ body{
     width: 100%;
     height: 100%;
     display: flex;
-    justify-content: center;
+    flex-direction: column;
+    align-items: center;
     padding: 24px;
 }
 
@@ -61,4 +62,11 @@ body{
 
 .desc {
     width: auto !important;
+}
+
+.down-text{
+    font-size: 14px;
+}
+.m-0{
+    margin: 0 !important;
 }
