--- a/css/invoice.css
+++ b/css/invoice.css
@@ -373,8 +373,19 @@ span {
 .f2 {
     padding-left: 10px;
 }
-
+.goBack{
+    font-size: 40px;
+    text-decoration: none;
+    color: white;
+    background-color: rgb(113, 113, 255);
+    padding: 5px;
+    margin: 20px;
+    border-radius: 5px;
+}
 @media print {
+    .goBack{
+        display: none;
+    }
     div {
       break-inside: avoid;
     }
