--- a/css/index.css
+++ b/css/index.css
@@ -1,6 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap');
 
-body{
+body {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
@@ -11,18 +11,23 @@ body{
     position: relative;
 }
 
-.topLogo{
+nav {
+    box-shadow: 0px 0px 8px #d6d6d6;
+}
+
+.topLogo {
     height: 30px;
     width: 30px;
     object-fit: cover;
 }
-.main-container{
+
+.main-container {
     display: flex;
     flex: 1;
     background-color: whitesmoke;
 }
 
-.content-wrapper{
+.content-wrapper {
     width: 100%;
     height: 100%;
     display: flex;
@@ -31,18 +36,20 @@ body{
     padding: 24px;
 }
 
-.content-main{
+.content-main {
     max-width: 105ch;
     width: 100%;
     /* background-color: white; */
 }
 
-.row{
+.row {
     margin: 0% !important;
 }
+
 .form-group {
     margin-bottom: -10px !important;
 }
+
 .form-group label {
     font-size: 12px;
 }
@@ -52,7 +59,7 @@ body{
     font-size: 12px !important;
 }
 
-.table-input{
+.table-input {
     margin: 0;
     width: 100%;
     height: 100%;
@@ -64,16 +71,37 @@ body{
     width: auto !important;
 }
 
-.down-text{
+.down-text {
     font-size: 14px;
 }
-.m-0{
+
+.m-0 {
     margin: 0 !important;
 }
 
-.cname{
+.cname {
     width: 100% !important;
 }
-.autoComplete_wrapper:has(.cname){
+
+.autoComplete_wrapper:has(.cname) {
     width: 100%;
+}
+
+::-webkit-scrollbar {
+    width: 10px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+    background: #f1f1f1;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+    background: #bababa;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+    background: #555;
 }
