--- a/css/dashboard.css
+++ b/css/dashboard.css
@@ -149,3 +149,9 @@
     background-color: #d6d6d6;
     box-shadow: 0px 2px 8px rgb(199, 199, 199);
 }
+
+.dataRow input,.dataRow textarea{
+    background-color: transparent;
+    flex: 1;
+    font-size: 12px;
+}
