--- a/css/product.css
+++ b/css/product.css
@@ -153,7 +153,8 @@ td {
   justify-content: center;
   position: relative;
   float: right;
-
+  text-decoration: none;
+  color: black;
 }
 
 .update:active {
